flux/default/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: static-site
  namespace: default
spec:
  selector:
    app: static-site
  ports:
    - port: 80
      targetPort: 80
